@startuml

interface ArchiveCreator
interface BinaryProvider
interface BinaryObject
class ArchiveCreatorFactory
class DocumentReader
class BinaryService
class Main
class Document
class Args

ArchiveCreator -- DocumentReader : gets documents from >
ArchiveCreator -- BinaryObject
DocumentReader -- Document
ArchiveCreator -- BinaryService : gets binaries from >
ArchiveCreator -- Document
BinaryService -- BinaryProvider : has >
BinaryService -- BinaryObject
BinaryProvider -- BinaryObject : provides >
Main -- ArchiveCreatorFactory
Main -- Args
Main -- ArchiveCreator : invokes >
ArchiveCreatorFactory -- ArchiveCreator : creates >
ArchiveCreatorFactory -- Args
ArchiveCreatorFactory -- DocumentReader
ArchiveCreatorFactory -- BinaryProvider
ArchiveCreatorFactory -- BinaryService
@enduml